edit shadows, fix nav text shifting on hover

--- a/stylesheets/index.scss
+++ b/stylesheets/index.scss
@@ -11,9 +11,9 @@ body {
   left: 0;
   z-index: 9999;
   width: 100vw;
-  height: 8vh;
+  height: 7vh;
   background-color: $coral-red;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
 .navbar-content {
@@ -31,16 +31,28 @@ body {
   margin-right: 2vw;
   margin-left: 2vw;
   margin-top: 0.4vh;
-  font-size: 2.5vmin;
+  font-size: 2vmin;
 }
 
 .navbar-content a {
+  display: inline-block;
   text-decoration: none;
   color: white;
 }
 
 .navbar-content a:hover {
   font-weight: $medium-font;
+  cursor: pointer;
+}
+
+.navbar-content a:after {
+  display: block;
+  content: attr(title);
+  font-weight: $medium-font;
+  height: 1px;
+  color: transparent;
+  overflow: hidden;
+  visibility: hidden;
 }
 
 #tnyu-title {
@@ -152,7 +164,7 @@ body {
   background-color: white;
   vertical-align: top;
   position: relative;
-  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
 .event-card:hover {
